<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.7"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/torre_santuario_cut" />

    <TextView
        android:id="@+id/tv_whoWeAre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:backgroundTint="#FFFFFF"
        android:padding="@dimen/tv_padding_small"
        android:text="@string/btn_about_us"
        android:textColor="#D5123C42"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_descriptionRegistation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_appName"
        app:layout_constraintVertical_bias="0.295" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="205dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:backgroundTint="@color/col_dark_txt"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/et_hint_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/col_et_hint"
        android:textSize="@dimen/et_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_descriptionRegistation" />

    <TextView
        android:id="@+id/tv_appName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/custom_tv_bg"
        android:fontFamily="@font/aclonica"
        android:foregroundTint="#C0664B"
        android:padding="@dimen/tv_padding_large"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/col_dark_txt"
        android:textSize="@dimen/tv_title_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_descriptionRegistation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:background="@drawable/custom_tv_bg"
        android:fontFamily="@font/aclonica"
        android:padding="@dimen/tv_padding_small"
        android:text="@string/tv_log_in_acc"
        android:textAlignment="center"
        android:textColor="@color/col_dark_txt"
        android:textSize="@dimen/tv_title_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_appName" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:backgroundTint="@color/col_dark_txt"
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/et_hint_psw"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/col_et_hint"
        android:textSize="@dimen/et_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/aclonica"
        android:padding="@dimen/btn_padding"
        android:text="@string/btn_sign_in"
        android:textColor="@color/col_dark_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/aclonica"
        android:padding="@dimen/btn_padding"
        android:text="@string/btn_log_in"
        android:textColor="@color/col_dark_txt"
        android:textSize="@dimen/btn_txt_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:progressDrawable="@android:drawable/progress_horizontal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:backgroundTint="@color/white"
        android:text="@string/tv_dont_have_account"
        android:textAlignment="center"
        android:textColor="@color/col_dark_txt"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>