<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlPopupDiscount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAFFFFFF"
    android:padding="@dimen/tv_padding_small">

    <ImageButton
        android:id="@+id/ibtnClosePopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@null"
        android:src="@android:drawable/ic_menu_close_clear_cancel" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEscape4Travel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ibtnClosePopup"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/margin_distance_small"
        android:layout_marginTop="@dimen/margin_distance_small"
        android:layout_marginEnd="@dimen/margin_distance_small">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvEscapeTravelTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:padding="@dimen/tv_padding_large"
                android:text="@string/text_tvEscapeTravelTitle"
                android:textSize="@dimen/tvTextSize"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvEscapeTravelServices1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:padding="@dimen/tv_padding_small"
                android:text="@string/text_tvEscapeTravelServices1"
                android:textSize="@dimen/tvTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEscapeTravelTitle" />

            <TextView
                android:id="@+id/tvEscapeTravelServices2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:padding="@dimen/tv_padding_small"
                android:text="@string/text_tvEscapeTravelServices2"
                android:textSize="@dimen/tvTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEscapeTravelServices1" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLudoPiccoloPrincipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cvEscape4Travel"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/margin_distance_small"
        android:layout_marginTop="@dimen/margin_distance_small"
        android:layout_marginEnd="@dimen/margin_distance_small">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvLudoPiccPrincTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:padding="@dimen/tv_padding_large"
                android:text="@string/text_tvLudoPiccPrincTitle"
                android:textSize="@dimen/tvTextSize"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLudoPiccPrincServices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:padding="@dimen/tv_padding_small"
                android:text="@string/text_tvLudoPiccPrincServices"
                android:textSize="@dimen/tvTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLudoPiccPrincTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvADFisio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cvLudoPiccoloPrincipe"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/margin_distance_small"
        android:layout_marginTop="@dimen/margin_distance_small"
        android:layout_marginEnd="@dimen/margin_distance_small">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvADFisioTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:padding="@dimen/tv_padding_large"
                android:text="@string/text_tvADFisioTitle"
                android:textSize="@dimen/tvTextSize"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvADFisioServices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:padding="@dimen/tv_padding_small"
                android:text="@string/text_tvADFisioServices"
                android:textSize="@dimen/tvTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvADFisioTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPizzeriaLeSorelle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cvADFisio"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/margin_distance_small"
        android:layout_marginTop="@dimen/margin_distance_small"
        android:layout_marginEnd="@dimen/margin_distance_small"
        android:layout_marginBottom="@dimen/margin_distance_small">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPizzeriaLeSorelleTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:padding="@dimen/tv_padding_large"
                android:text="@string/text_tvPizzeriaLeSorelleTitle"
                android:textSize="@dimen/tvTextSize"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPizzeriaLeSorelleServices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:padding="@dimen/tv_padding_small"
                android:text="@string/text_tvPizzeriaLeSorelleServices"
                android:textSize="@dimen/tvTextSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPizzeriaLeSorelleTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>